examples/test/testpolicy5826.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5826
  namespace: namespace498
spec:
  podSelector:
    matchLabels:
      key22: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value18
          key35: value0
          key26: value36
      podSelector:
        matchLabels:
          key24: value17
          key35: value22
          key22: value28
